separate columns for hour and minute

--- a/templates/time-scatter-plot.html
+++ b/templates/time-scatter-plot.html
@@ -19,272 +19,272 @@
 <script src="d3.v3.min.js"></script>
 <script>
     var rawData = /*data_placeholder*/"\
-dayOfWeek,time,value\n\
-1,0:14,1\n\
-1,8:41,1\n\
-1,12:38,1\n\
-1,18:52,1\n\
-1,18:57,1\n\
-1,19:2,1\n\
-1,19:10,1\n\
-1,20:12,1\n\
-1,20:24,1\n\
-1,20:27,1\n\
-1,20:35,1\n\
-1,20:41,1\n\
-1,21:33,1\n\
-1,22:7,1\n\
-1,22:55,1\n\
-1,23:5,1\n\
-1,23:18,1\n\
-1,23:21,1\n\
-1,23:23,1\n\
-1,23:54,1\n\
-2,0:3,1\n\
-2,0:6,1\n\
-2,0:23,1\n\
-2,0:29,1\n\
-2,0:33,1\n\
-2,0:42,1\n\
-2,0:49,1\n\
-2,8:6,1\n\
-2,8:12,1\n\
-2,8:22,1\n\
-2,8:25,1\n\
-2,8:28,1\n\
-2,8:39,1\n\
-2,8:42,1\n\
-2,8:48,1\n\
-2,8:49,1\n\
-2,8:55,1\n\
-2,8:59,1\n\
-2,10:9,1\n\
-2,18:11,1\n\
-2,18:23,1\n\
-2,18:39,1\n\
-2,18:40,2\n\
-2,19:8,1\n\
-2,19:12,1\n\
-2,20:32,1\n\
-2,20:34,1\n\
-2,21:6,1\n\
-2,21:14,1\n\
-2,21:15,1\n\
-2,21:38,1\n\
-2,21:44,1\n\
-2,21:58,1\n\
-2,22:11,1\n\
-2,22:58,1\n\
-2,23:5,1\n\
-2,23:14,1\n\
-2,23:48,1\n\
-2,23:54,1\n\
-2,23:55,1\n\
-2,23:56,1\n\
-3,0:5,1\n\
-3,0:6,1\n\
-3,0:15,1\n\
-3,0:26,1\n\
-3,0:29,1\n\
-3,0:40,1\n\
-3,0:50,2\n\
-3,0:53,1\n\
-3,8:38,1\n\
-3,8:43,1\n\
-3,9:10,1\n\
-3,17:52,1\n\
-3,18:35,1\n\
-3,18:37,1\n\
-3,18:42,1\n\
-3,18:49,1\n\
-3,18:50,1\n\
-3,18:52,1\n\
-3,18:59,1\n\
-3,19:12,1\n\
-3,19:16,1\n\
-3,20:26,2\n\
-3,21:11,1\n\
-3,21:15,1\n\
-3,21:22,1\n\
-3,22:28,1\n\
-3,23:21,1\n\
-3,23:53,1\n\
-4,8:11,1\n\
-4,8:20,1\n\
-4,8:29,1\n\
-4,8:30,1\n\
-4,8:34,1\n\
-4,8:37,1\n\
-4,8:44,1\n\
-4,8:46,1\n\
-4,8:55,1\n\
-4,8:56,1\n\
-4,9:11,1\n\
-4,18:40,1\n\
-4,18:52,1\n\
-4,19:45,1\n\
-4,19:46,1\n\
-4,20:4,1\n\
-4,20:19,1\n\
-4,20:39,1\n\
-4,20:40,1\n\
-4,20:50,1\n\
-4,20:55,1\n\
-4,20:59,1\n\
-4,21:7,1\n\
-4,22:0,1\n\
-4,22:16,1\n\
-4,22:30,1\n\
-4,22:54,1\n\
-4,23:2,1\n\
-4,23:8,1\n\
-4,23:10,1\n\
-4,23:33,1\n\
-4,23:42,1\n\
-4,23:54,1\n\
-5,6:53,1\n\
-5,6:59,1\n\
-5,7:1,1\n\
-5,7:4,1\n\
-5,7:8,1\n\
-5,7:10,1\n\
-5,7:13,1\n\
-5,7:32,1\n\
-5,8:46,1\n\
-5,17:36,1\n\
-5,18:8,1\n\
-5,18:29,1\n\
-5,18:52,1\n\
-5,18:55,1\n\
-5,19:1,1\n\
-5,19:5,1\n\
-5,19:12,1\n\
-5,19:15,1\n\
-5,19:19,1\n\
-5,19:23,1\n\
-5,20:56,1\n\
-5,21:22,1\n\
-5,21:26,1\n\
-5,21:29,1\n\
-5,21:40,1\n\
-5,22:8,1\n\
-5,23:38,1\n\
-5,23:55,1\n\
-6,0:42,1\n\
-6,0:52,1\n\
-6,0:53,1\n\
-6,1:9,1\n\
-6,1:42,1\n\
-6,2:6,1\n\
-6,2:41,1\n\
-6,8:59,1\n\
-6,9:4,1\n\
-6,9:35,1\n\
-6,9:37,1\n\
-6,10:17,1\n\
-6,10:53,1\n\
-6,11:28,1\n\
-6,11:50,1\n\
-6,12:17,1\n\
-6,12:36,1\n\
-6,13:16,1\n\
-6,13:19,1\n\
-6,13:25,1\n\
-6,13:35,1\n\
-6,13:40,1\n\
-6,14:53,1\n\
-6,14:57,1\n\
-6,15:20,1\n\
-6,15:26,1\n\
-6,15:54,1\n\
-6,15:55,1\n\
-6,15:58,1\n\
-6,16:5,1\n\
-6,16:14,1\n\
-6,16:15,1\n\
-6,16:34,1\n\
-6,16:39,1\n\
-6,16:59,1\n\
-6,17:16,2\n\
-6,17:19,2\n\
-6,17:23,1\n\
-6,17:28,1\n\
-6,17:37,1\n\
-6,17:42,1\n\
-6,17:43,1\n\
-6,17:44,1\n\
-6,17:55,1\n\
-6,17:58,1\n\
-6,18:1,1\n\
-6,18:10,1\n\
-6,18:27,1\n\
-6,18:28,1\n\
-6,18:29,1\n\
-6,19:1,1\n\
-6,19:10,1\n\
-6,19:50,1\n\
-6,20:19,1\n\
-6,22:33,1\n\
-6,23:22,1\n\
-6,23:27,1\n\
-6,23:31,1\n\
-6,23:34,1\n\
-6,23:43,1\n\
-6,23:48,1\n\
-7,0:14,1\n\
-7,8:4,1\n\
-7,9:41,1\n\
-7,10:48,1\n\
-7,11:37,1\n\
-7,11:49,1\n\
-7,12:51,1\n\
-7,13:25,1\n\
-7,14:34,1\n\
-7,14:41,2\n\
-7,14:51,1\n\
-7,14:56,1\n\
-7,15:0,1\n\
-7,15:26,1\n\
-7,15:49,1\n\
-7,17:5,1\n\
-7,17:21,1\n\
-7,17:37,1\n\
-7,17:46,1\n\
-7,17:55,2\n\
-7,18:4,1\n\
-7,18:11,1\n\
-7,18:30,1\n\
-7,18:36,1\n\
-7,18:43,1\n\
-7,19:18,1\n\
-7,19:24,1\n\
-7,19:35,1\n\
-7,19:41,1\n\
-7,19:46,1\n\
-7,19:49,1\n\
-7,19:55,1\n\
-7,19:58,1\n\
-7,20:17,1\n\
-7,21:7,1\n\
-7,21:10,1\n\
-7,21:15,1\n\
-7,21:22,1\n\
-7,21:28,1\n\
-7,21:29,1\n\
-7,21:42,1\n\
-7,21:47,1\n\
-7,21:56,1\n\
-7,21:59,3\n\
-7,22:2,1\n\
-7,22:6,2\n\
-7,22:10,1\n\
-7,22:21,1\n\
-7,22:51,1\n\
-7,22:55,1\n\
-7,23:5,1\n\
-7,23:14,1\n\
-7,23:38,1\n\
-"/*data_placeholder*/;
+dayOfWeek,hour,minute,value\n\
+1,0,14,1\n\
+1,8,41,1\n\
+1,12,38,1\n\
+1,18,52,1\n\
+1,18,57,1\n\
+1,19,2,1\n\
+1,19,10,1\n\
+1,20,12,1\n\
+1,20,24,1\n\
+1,20,27,1\n\
+1,20,35,1\n\
+1,20,41,1\n\
+1,21,33,1\n\
+1,22,7,1\n\
+1,22,55,1\n\
+1,23,5,1\n\
+1,23,18,1\n\
+1,23,21,1\n\
+1,23,23,1\n\
+1,23,54,1\n\
+2,0,3,1\n\
+2,0,6,1\n\
+2,0,23,1\n\
+2,0,29,1\n\
+2,0,33,1\n\
+2,0,42,1\n\
+2,0,49,1\n\
+2,8,6,1\n\
+2,8,12,1\n\
+2,8,22,1\n\
+2,8,25,1\n\
+2,8,28,1\n\
+2,8,39,1\n\
+2,8,42,1\n\
+2,8,48,1\n\
+2,8,49,1\n\
+2,8,55,1\n\
+2,8,59,1\n\
+2,10,9,1\n\
+2,18,11,1\n\
+2,18,23,1\n\
+2,18,39,1\n\
+2,18,40,2\n\
+2,19,8,1\n\
+2,19,12,1\n\
+2,20,32,1\n\
+2,20,34,1\n\
+2,21,6,1\n\
+2,21,14,1\n\
+2,21,15,1\n\
+2,21,38,1\n\
+2,21,44,1\n\
+2,21,58,1\n\
+2,22,11,1\n\
+2,22,58,1\n\
+2,23,5,1\n\
+2,23,14,1\n\
+2,23,48,1\n\
+2,23,54,1\n\
+2,23,55,1\n\
+2,23,56,1\n\
+3,0,5,1\n\
+3,0,6,1\n\
+3,0,15,1\n\
+3,0,26,1\n\
+3,0,29,1\n\
+3,0,40,1\n\
+3,0,50,2\n\
+3,0,53,1\n\
+3,8,38,1\n\
+3,8,43,1\n\
+3,9,10,1\n\
+3,17,52,1\n\
+3,18,35,1\n\
+3,18,37,1\n\
+3,18,42,1\n\
+3,18,49,1\n\
+3,18,50,1\n\
+3,18,52,1\n\
+3,18,59,1\n\
+3,19,12,1\n\
+3,19,16,1\n\
+3,20,26,2\n\
+3,21,11,1\n\
+3,21,15,1\n\
+3,21,22,1\n\
+3,22,28,1\n\
+3,23,21,1\n\
+3,23,53,1\n\
+4,8,11,1\n\
+4,8,20,1\n\
+4,8,29,1\n\
+4,8,30,1\n\
+4,8,34,1\n\
+4,8,37,1\n\
+4,8,44,1\n\
+4,8,46,1\n\
+4,8,55,1\n\
+4,8,56,1\n\
+4,9,11,1\n\
+4,18,40,1\n\
+4,18,52,1\n\
+4,19,45,1\n\
+4,19,46,1\n\
+4,20,4,1\n\
+4,20,19,1\n\
+4,20,39,1\n\
+4,20,40,1\n\
+4,20,50,1\n\
+4,20,55,1\n\
+4,20,59,1\n\
+4,21,7,1\n\
+4,22,0,1\n\
+4,22,16,1\n\
+4,22,30,1\n\
+4,22,54,1\n\
+4,23,2,1\n\
+4,23,8,1\n\
+4,23,10,1\n\
+4,23,33,1\n\
+4,23,42,1\n\
+4,23,54,1\n\
+5,6,53,1\n\
+5,6,59,1\n\
+5,7,1,1\n\
+5,7,4,1\n\
+5,7,8,1\n\
+5,7,10,1\n\
+5,7,13,1\n\
+5,7,32,1\n\
+5,8,46,1\n\
+5,17,36,1\n\
+5,18,8,1\n\
+5,18,29,1\n\
+5,18,52,1\n\
+5,18,55,1\n\
+5,19,1,1\n\
+5,19,5,1\n\
+5,19,12,1\n\
+5,19,15,1\n\
+5,19,19,1\n\
+5,19,23,1\n\
+5,20,56,1\n\
+5,21,22,1\n\
+5,21,26,1\n\
+5,21,29,1\n\
+5,21,40,1\n\
+5,22,8,1\n\
+5,23,38,1\n\
+5,23,55,1\n\
+6,0,42,1\n\
+6,0,52,1\n\
+6,0,53,1\n\
+6,1,9,1\n\
+6,1,42,1\n\
+6,2,6,1\n\
+6,2,41,1\n\
+6,8,59,1\n\
+6,9,4,1\n\
+6,9,35,1\n\
+6,9,37,1\n\
+6,10,17,1\n\
+6,10,53,1\n\
+6,11,28,1\n\
+6,11,50,1\n\
+6,12,17,1\n\
+6,12,36,1\n\
+6,13,16,1\n\
+6,13,19,1\n\
+6,13,25,1\n\
+6,13,35,1\n\
+6,13,40,1\n\
+6,14,53,1\n\
+6,14,57,1\n\
+6,15,20,1\n\
+6,15,26,1\n\
+6,15,54,1\n\
+6,15,55,1\n\
+6,15,58,1\n\
+6,16,5,1\n\
+6,16,14,1\n\
+6,16,15,1\n\
+6,16,34,1\n\
+6,16,39,1\n\
+6,16,59,1\n\
+6,17,16,2\n\
+6,17,19,2\n\
+6,17,23,1\n\
+6,17,28,1\n\
+6,17,37,1\n\
+6,17,42,1\n\
+6,17,43,1\n\
+6,17,44,1\n\
+6,17,55,1\n\
+6,17,58,1\n\
+6,18,1,1\n\
+6,18,10,1\n\
+6,18,27,1\n\
+6,18,28,1\n\
+6,18,29,1\n\
+6,19,1,1\n\
+6,19,10,1\n\
+6,19,50,1\n\
+6,20,19,1\n\
+6,22,33,1\n\
+6,23,22,1\n\
+6,23,27,1\n\
+6,23,31,1\n\
+6,23,34,1\n\
+6,23,43,1\n\
+6,23,48,1\n\
+7,0,14,1\n\
+7,8,4,1\n\
+7,9,41,1\n\
+7,10,48,1\n\
+7,11,37,1\n\
+7,11,49,1\n\
+7,12,51,1\n\
+7,13,25,1\n\
+7,14,34,1\n\
+7,14,41,2\n\
+7,14,51,1\n\
+7,14,56,1\n\
+7,15,0,1\n\
+7,15,26,1\n\
+7,15,49,1\n\
+7,17,5,1\n\
+7,17,21,1\n\
+7,17,37,1\n\
+7,17,46,1\n\
+7,17,55,2\n\
+7,18,4,1\n\
+7,18,11,1\n\
+7,18,30,1\n\
+7,18,36,1\n\
+7,18,43,1\n\
+7,19,18,1\n\
+7,19,24,1\n\
+7,19,35,1\n\
+7,19,41,1\n\
+7,19,46,1\n\
+7,19,49,1\n\
+7,19,55,1\n\
+7,19,58,1\n\
+7,20,17,1\n\
+7,21,7,1\n\
+7,21,10,1\n\
+7,21,15,1\n\
+7,21,22,1\n\
+7,21,28,1\n\
+7,21,29,1\n\
+7,21,42,1\n\
+7,21,47,1\n\
+7,21,56,1\n\
+7,21,59,3\n\
+7,22,2,1\n\
+7,22,6,2\n\
+7,22,10,1\n\
+7,22,21,1\n\
+7,22,51,1\n\
+7,22,55,1\n\
+7,23,5,1\n\
+7,23,14,1\n\
+7,23,38,1\n\
+" /*data_placeholder*/;
     var projectName = /*project_name_placeholder*/"code-history-mining"/*project_name_placeholder*/;
 
     createCommitTimeScatterPlot("scatter-plot", rawData);
@@ -325,9 +325,9 @@ dayOfWeek,time,value\n\
         var data = d3.csv.parse(rawData)
                 .map(function(d) { return {
                     dayOfWeek: +d.dayOfWeek,
-                    hour: parseHour(d.time),
-                    minute: parseMinute(d.time),
-                    dayAndHour: (+d.dayOfWeek - 1) * 24 + parseHour(d.time),
+                    hour: +d.hour,
+                    minute: +d.minute,
+                    dayAndHour: (+d.dayOfWeek - 1) * 24 + (+d.hour),
                     value: d.value
                 };});
 
@@ -379,14 +379,6 @@ dayOfWeek,time,value\n\
                 });
     }
 
-    function parseHour(s) {
-        var i = s.indexOf(":");
-        return +s.substring(0, i);
-    }
-    function parseMinute(s) {
-        var i = s.indexOf(":");
-        return +s.substring(i + 1);
-    }
     function appendBlockElementTo(element, width) {
         return element.append("span").style({display: "block", width: width + "px"});
     }
