--- a/templates/time-scatter-plot.html
+++ b/templates/time-scatter-plot.html
@@ -383,30 +383,30 @@ dayOfWeek,hour,minute,value\n\
         var footerSpan = appendBlockElementTo(rootElement, width + margin.left);
         var span = footerSpan.append("span").style({float: "right"});
         span.append("label").html("Commit size multiplier: ");
-        var colorThresholdLabel = span.append("label");
+        var multiplierLabel = span.append("label");
+        span.append("span").style({width: "20px", display: "inline-block"});
 
         span.append("button").text("-").on("click", function () {
-            commitSizeMultiplier--;
-            points.attr("r", function (d) { return d.value * commitSizeMultiplier; });
-//            data = parseRawData(rawData[rawDataIndex], threshold);
-//            updateCalendarView(dayRects, data);
+            if (commitSizeMultiplier <= 1) commitSizeMultiplier = 0.5;
+            else commitSizeMultiplier--;
+            updatePointSizes(points, multiplierLabel, commitSizeMultiplier);
         });
         span.append("button").text("+").on("click", function () {
-            commitSizeMultiplier++;
-            points.attr("r", function (d) { return d.value * commitSizeMultiplier; });
-//            data = parseRawData(rawData[rawDataIndex], threshold);
-//            updateCalendarView(dayRects, data);
+            commitSizeMultiplier = Math.floor(commitSizeMultiplier + 1);
+            updatePointSizes(points, multiplierLabel, commitSizeMultiplier);
         });
         span.append("button").text("reset").on("click", function () {
             commitSizeMultiplier = defaultCommitSizeMultiplier;
-            points.attr("r", function (d) { return d.value * commitSizeMultiplier; });
-//            threshold = 95;
-//            data = parseRawData(rawData[rawDataIndex], threshold);
-//            updateCalendarView(dayRects, data);
+            updatePointSizes(points, multiplierLabel, commitSizeMultiplier);
         });
 
+        updatePointSizes(points, multiplierLabel, commitSizeMultiplier);
     }
 
+    function updatePointSizes(points, label, multiplier) {
+        points.attr("r", function (d) { return d.value * multiplier; });
+        label.html(multiplier + "x");
+    }
     function appendBlockElementTo(element, width) {
         return element.append("span").style({display: "block", width: width + "px"});
     }
