--- a/templates/time-scatter-plot.html
+++ b/templates/time-scatter-plot.html
@@ -7,6 +7,12 @@
         margin: 30px;
         font-family: 'Lucida Grande','Calibri',Helvetica,Arial,sans-serif;
     }
+    .dot {
+        fill: steelblue;
+    }
+    .dot:hover {
+        fill: rgb(62, 104, 146);
+    }
     .axis path,
     .axis line {
         fill: none;
@@ -401,13 +407,14 @@ dayOfWeek,hour,minute,value\n\
         });
 
         span.append("span").style({width: "20px", display: "inline-block"});
-        span.append("label").html("Group time by: ");
+        span.append("label").html("Group commits by: ");
         var dropDown = span.append("select");
         dropDown.append("option").attr("value", "0").html("hours");
         dropDown.append("option").attr("value", "1").html("minutes");
         dropDown.on("change", function() {
             groupByHours = (+this.value == 0);
             points = updatePoints();
+            updatePointSizes(points, multiplierLabel, commitSizeMultiplier);
         });
 
         updatePointSizes(points, multiplierLabel, commitSizeMultiplier);
@@ -423,11 +430,9 @@ dayOfWeek,hour,minute,value\n\
                         .enter().append("circle");
                 points.attr("class", "dot")
                         .attr("clip-path", "url(#scatterPlotClip)")
-                        .attr("r", function(d) { return d.value * commitSizeMultiplier; })
                         .attr("cx", function(d) { return x((d.dayOfWeek - 1) * 24 + 12); })
                         .attr("cy", function(d) { return y(d.hour); })
-                        .style("opacity", function() { return 0.8; })
-                        .style("fill", function() { return color(0); })
+                        .style("opacity", function() { return 0.9; })
                         .append("title").text(function (d) {
                             return d.value + " commit(s) at " + d.hour + " hours " + " on " + toDayOfWeek(d.dayOfWeek);
                         });
@@ -443,11 +448,9 @@ dayOfWeek,hour,minute,value\n\
                         .enter().append("circle");
                 points.attr("class", "dot")
                         .attr("clip-path", "url(#scatterPlotClip)")
-                        .attr("r", function (d) { return d.value * commitSizeMultiplier; })
                         .attr("cx", function (d) { return x(d.dayAndHour); })
                         .attr("cy", function (d) { return y(d.minute); })
-                        .style("opacity", function() { return 0.8; })
-                        .style("fill", function() { return color(0); })
+                        .style("opacity", function() { return 0.9; })
                         .append("title").text(function (d) {
                             return d.value + " commit(s) at " + d.hour + ":" + d.minute + " on " + toDayOfWeek(d.dayOfWeek);
                         });
