--- a/templates/calendar-view.html
+++ b/templates/calendar-view.html
@@ -28,6 +28,7 @@
     .calendar-view .q9-10{fill: rgb(70,130,180)} /*steelblue*/
 </style>
 <!--TODO take proper color palette from web even if there are less than 10 colors -->
+<head><title>Calendar view of changes</title></head>
 <body>
 <span id="calendar-view"></span>
 <script src="d3.v3.min.js"></script>
