--- a/templates/changes-size-chart.html
+++ b/templates/changes-size-chart.html
@@ -25,6 +25,7 @@
         shape-rendering: crispEdges;
     }
 </style>
+<head><title>Change size chart</title></head>
 <body>
 <span id="changes-size-view"></span>
 <script src="d3.v3.min.js"></script>
