--- a/templates/time-scatter-plot.html
+++ b/templates/time-scatter-plot.html
@@ -20,6 +20,7 @@
         shape-rendering: crispEdges;
     }
 </style>
+<head><title>Commit time scatter plot</title></head>
 <body>
 <span id="scatter-plot"></span>
 <script src="d3.v3.min.js"></script>
