--- a/templates/files-in-same-commit-graph.html
+++ b/templates/files-in-same-commit-graph.html
@@ -38,6 +38,7 @@
         pointer-events: none;
     }
 </style>
+<head><title>Files in the same commit</title></head>
 <body>
 <script src="d3.v3.min.js"></script>
 <span id="rootElement"></span>
@@ -133,7 +134,7 @@ const graph = {
 /*data_placeholder*/
 };
 var projectName = /*project_name_placeholder*/"some project"/*project_name_placeholder*/;
-var graphName = "Files in the same commit";
+var graphName = "Files in the same commit (" + projectName + ")";
 
 
 function createForcesGraphOn(elementId, graph) {
