--- a/templates/wordcloud.html
+++ b/templates/wordcloud.html
@@ -10,6 +10,7 @@
 <!--TODO diff d3.v2.min-2.js with existing d3 lib-->
 <script src="d3.v2.min-2.js"></script>
 <script src="d3.layout.cloud.js"></script>
+<head><title>Commit messages word cloud</title></head>
 <body>
     <span id="wordCloud"></span>
 </body>
