--- a/templates/author-to-file-graph.html
+++ b/templates/author-to-file-graph.html
@@ -115,7 +115,7 @@ const graph = {
         /*data_placeholder*/
 };
 var projectName = /*project_name_placeholder*/"junit"/*project_name_placeholder*/;
-var graphName = "Committers changing same files (" + projectName + ")";
+var graphName = "Committers changing same files";
 
 function createForcesGraphOn(elementId, graph) {
     function QuickFind(size) {
