--- a/templates/files-in-same-commit-graph.html
+++ b/templates/files-in-same-commit-graph.html
@@ -134,7 +134,7 @@ const graph = {
 /*data_placeholder*/
 };
 var projectName = /*project_name_placeholder*/"some project"/*project_name_placeholder*/;
-var graphName = "Files in the same commit (" + projectName + ")";
+var graphName = "Files in the same commit";
 
 
 function createForcesGraphOn(elementId, graph) {
